--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -25,8 +25,10 @@ supported_commands_by_ecu:
   - 012F:FLI
   - 0130:WARM_UPS
   - 0131:CLR_DIST
+  - 0132:EVAP_VP
   - 0133:BARO
   - 013C:CATEMP11
+  - 013E:CATEMP12
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 0142:VPWR
   - 0143:LOAD_ABS
@@ -45,9 +47,12 @@ supported_commands_by_ecu:
   - 0162:TQ_ACT
   - 0163:TQ_REF
   - 0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
+  - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 016B:EGRTA,EGRTA,EGRTA_SUP,EGRTA_WR_SUP,EGRTB,EGRTB,EGRTB_SUP,EGRTB_WR_SUP,EGRTC,EGRTC,EGRTC_SUP,EGRTC_WR_SUP,EGRTD,EGRTD,EGRTD_SUP,EGRTD_WR_SUP
   - 018E:TQ_FR
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
+  - 019F:FUELSYSA_B1,FUELSYSA_B1_SUP,FUELSYSA_B2,FUELSYSA_B2_SUP,FUELSYSA_B3,FUELSYSA_B3_SUP,FUELSYSA_B4,FUELSYSA_B4_SUP,FUELSYSB_B1,FUELSYSB_B1_SUP,FUELSYSB_B2,FUELSYSB_B2_SUP,FUELSYSB_B3,FUELSYSB_B3_SUP,FUELSYSB_B4,FUELSYSB_B4_SUP
   - 01A6:ODO
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
