--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -66,6 +66,7 @@ supported_commands_by_ecu:
   - 0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
   - 0172:WG_A_ACT,WG_A_ACT_SUP,WG_A_CMD,WG_A_CMD_SUP,WG_B_ACT,WG_B_ACT_SUP,WG_B_CMD,WG_B_CMD_SUP
   - 017F:IDLE_TIME,IDLE_TIME_SUP,PTO_TIME,PTO_TIME_SUP,RUN_TIME,RUN_TIME_SUP
+  - 7E0.012F:FLI
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
@@ -81,3 +82,8 @@ supported_commands_by_ecu:
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 0142:VPWR
   - 0149:APP_D
+unsupported_commands_by_ecu:
+  "7A0":
+  - 7A0.7A8.22C00B|fc=1:TUCSON_TP_FL,TUCSON_TP_FR,TUCSON_TP_RL,TUCSON_TP_RR
+  "7C6":
+  - 7C6.7CE.22B002:TUCSON_FLI_VOL,TUCSON_ODO_KM,TUCSON_ODO_MI
