Update command data for Hyundai/Tucson

--- a/tests/test_cases/2023/commands/7C6.7CE.22B002.yaml
+++ b/tests/test_cases/2023/commands/7C6.7CE.22B002.yaml
@@ -9,6 +9,14 @@ test_cases:
     7CE2100599E00000000
     7CE222259AAAAAAAAAA
 - expected_values:
+    TUCSON_FLI_VOL: 91
+    TUCSON_ODO_KM: 0
+    TUCSON_ODO_MI: 8796
+  response: |-
+    7CE100F62B002D00000
+    7CE21005BA600000000
+    7CE22225CAAAAAAAAAA
+- expected_values:
     TUCSON_FLI_VOL: 93
     TUCSON_ODO_KM: 0
     TUCSON_ODO_MI: 8793
@@ -25,13 +33,13 @@ test_cases:
     7CE2100609D00000000
     7CE222259AAAAAAAAAA
 - expected_values:
-    TUCSON_FLI_VOL: 96
+    TUCSON_FLI_VOL: 98
     TUCSON_ODO_KM: 0
-    TUCSON_ODO_MI: 8795
+    TUCSON_ODO_MI: 8796
   response: |-
     7CE100F62B002D00000
-    7CE210060A900000000
-    7CE22225BAAAAAAAAAA
+    7CE2100629F00000000
+    7CE22225CAAAAAAAAAA
 - expected_values:
     TUCSON_FLI_VOL: 255
     TUCSON_ODO_KM: 0
