--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -1,6 +1,18 @@
 command_id: 7A0.7A8.22C00B|fc=1
 test_cases:
 - expected_values:
+    TUCSON_TP_FL: 0
+    TUCSON_TP_FR: 0
+    TUCSON_TP_RL: 0
+    TUCSON_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F8000000000200
+    7A82200000002000000
+    7A82300020000000002
+    7A824FFFFFFFFFFFFFF
+    7A825FFFFAAAAAAAAAA
+- expected_values:
     TUCSON_TP_FL: 33.8
     TUCSON_TP_FR: 33.2
     TUCSON_TP_RL: 33.6
