--- a/tests/test_cases/2019/commands/7E0.0131.yaml
+++ b/tests/test_cases/2019/commands/7E0.0131.yaml
@@ -4,5 +4,8 @@ test_cases:
     CLR_DIST: 2514
   response: 7E804413109D2
 - expected_values:
-    CLR_DIST: 2533
-  response: 7E804413109E5
+    CLR_DIST: 2559
+  response: 7E804413109FF
+- expected_values:
+    CLR_DIST: 2560
+  response: 7E80441310A00
