--- a/tests/test_cases/2015/commands/7E0.0104.yaml
+++ b/tests/test_cases/2015/commands/7E0.0104.yaml
@@ -1,5 +1,26 @@
 command_id: 7E0.0104
 test_cases:
 - expected_values:
+    LOAD_PCT: 45.4902
+  response: '7E803410474'
+- expected_values:
+    LOAD_PCT: 45.88235
+  response: '7E803410475'
+- expected_values:
+    LOAD_PCT: 46.27451
+  response: '7E803410476'
+- expected_values:
     LOAD_PCT: 54.11765
   response: 7E80341048A
+- expected_values:
+    LOAD_PCT: 56.86275
+  response: '7E803410491'
+- expected_values:
+    LOAD_PCT: 69.01961
+  response: 7E8034104B0
+- expected_values:
+    LOAD_PCT: 77.2549
+  response: 7E8034104C5
+- expected_values:
+    LOAD_PCT: 78.43137
+  response: 7E8034104C8
