--- a/tests/test_cases/2015/commands/7E0.0105.yaml
+++ b/tests/test_cases/2015/commands/7E0.0105.yaml
@@ -3,3 +3,30 @@ test_cases:
 - expected_values:
     ECT: 54
   response: 7E80341055E
+- expected_values:
+    ECT: 59
+  response: '7E803410563'
+- expected_values:
+    ECT: 63
+  response: '7E803410567'
+- expected_values:
+    ECT: 67
+  response: 7E80341056B
+- expected_values:
+    ECT: 69
+  response: 7E80341056D
+- expected_values:
+    ECT: 72
+  response: '7E803410570'
+- expected_values:
+    ECT: 75
+  response: '7E803410573'
+- expected_values:
+    ECT: 77
+  response: '7E803410575'
+- expected_values:
+    ECT: 81
+  response: '7E803410579'
+- expected_values:
+    ECT: 84
+  response: 7E80341057C
