--- a/tests/test_cases/2015/commands/7E0.0106.yaml
+++ b/tests/test_cases/2015/commands/7E0.0106.yaml
@@ -1,5 +1,17 @@
 command_id: 7E0.0106
 test_cases:
 - expected_values:
+    SHRTFT1: -32.6875
+  response: 7E80341067A
+- expected_values:
+    SHRTFT1: -31.90625
+  response: 7E80341067B
+- expected_values:
     SHRTFT1: -29.5625
   response: 7E80341067E
+- expected_values:
+    SHRTFT1: -28
+  response: '7E803410680'
+- expected_values:
+    SHRTFT1: -26.4375
+  response: '7E803410682'
