--- a/tests/test_cases/2015/commands/7E0.0144.yaml
+++ b/tests/test_cases/2015/commands/7E0.0144.yaml
@@ -1,5 +1,14 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.9922
+  response: 7E80441447F00
+- expected_values:
     EQ_RAT: 0.99318
   response: 7E80441447F20
+- expected_values:
+    EQ_RAT: 0.99513
+  response: 7E80441447F60
+- expected_values:
+    EQ_RAT: 0.99611
+  response: 7E80441447F80
