--- a/tests/test_cases/2015/commands/7E0.0144.yaml
+++ b/tests/test_cases/2015/commands/7E0.0144.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     EQ_RAT: 0.99611
   response: 7E80441447F80
+- expected_values:
+    EQ_RAT: 0.99709
+  response: 7E80441447FA0
