--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -66,6 +66,7 @@ supported_commands_by_ecu:
   - 0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
   - 0172:WG_A_ACT,WG_A_ACT_SUP,WG_A_CMD,WG_A_CMD_SUP,WG_B_ACT,WG_B_ACT_SUP,WG_B_CMD,WG_B_CMD_SUP
   - 017F:IDLE_TIME,IDLE_TIME_SUP,PTO_TIME,PTO_TIME_SUP,RUN_TIME,RUN_TIME_SUP
+  - 7E0.010D:VSS
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
   - 7E0.0142:VPWR
