Update command data for Hyundai/Tucson

--- a/tests/test_cases/2015/commands/7E0.0134.yaml
+++ b/tests/test_cases/2015/commands/7E0.0134.yaml
@@ -5,14 +5,18 @@ test_cases:
     O2S11_CURRENT: -0.45312
   response: 7E8064134764E7F8C
 - expected_values:
-    LAMBDA11_CURRENT: 0.93109
-    O2S11_CURRENT: -0.40625
-  response: 7E8064134772E7F98
+    LAMBDA11_CURRENT: 0.95358
+    O2S11_CURRENT: -0.26562
+  response: 7E80641347A0F7FBC
 - expected_values:
-    LAMBDA11_CURRENT: 0.96823
-    O2S11_CURRENT: -0.18359
-  response: 7E80641347BEF7FD1
+    LAMBDA11_CURRENT: 0.96042
+    O2S11_CURRENT: -0.22656
+  response: 7E80641347AEF7FC6
 - expected_values:
-    LAMBDA11_CURRENT: 0.98581
-    O2S11_CURRENT: -0.08594
-  response: 7E80641347E2F7FEA
+    LAMBDA11_CURRENT: 0.98972
+    O2S11_CURRENT: -0.05859
+  response: 7E80641347EAF7FF1
+- expected_values:
+    LAMBDA11_CURRENT: 1.02002
+    O2S11_CURRENT: 0.07812
+  response: '7E806413482908014'
