--- a/tests/test_cases/2015/commands/7E0.0144.yaml
+++ b/tests/test_cases/2015/commands/7E0.0144.yaml
@@ -7,6 +7,9 @@ test_cases:
     EQ_RAT: 0.99318
   response: 7E80441447F20
 - expected_values:
+    EQ_RAT: 0.99416
+  response: 7E80441447F40
+- expected_values:
     EQ_RAT: 0.99513
   response: 7E80441447F60
 - expected_values:
