--- a/tests/test_cases/2015/commands/7E0.0106.yaml
+++ b/tests/test_cases/2015/commands/7E0.0106.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0106
 test_cases:
 - expected_values:
-    SHRTFT1: -32.6875
-  response: 7E80341067A
+    SHRTFT1: -38.9375
+  response: '7E803410672'
 - expected_values:
     SHRTFT1: -23.3125
   response: '7E803410686'
