--- a/tests/test_cases/2015/commands/7E0.0144.yaml
+++ b/tests/test_cases/2015/commands/7E0.0144.yaml
@@ -24,3 +24,6 @@ test_cases:
 - expected_values:
     EQ_RAT: 0.99806
   response: 7E80441447FC0
+- expected_values:
+    EQ_RAT: 1.03029
+  response: 7E804414483E0
