Update command data for Hyundai/Tucson

--- a/tests/test_cases/2015/commands/7E0.0144.yaml
+++ b/tests/test_cases/2015/commands/7E0.0144.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
+    EQ_RAT: 0.87208
+  response: 7E80441446FA0
+- expected_values:
     EQ_RAT: 0.98927
   response: 7E80441447EA0
 - expected_values:
