--- a/tests/test_cases/2015/commands/7E0.0134.yaml
+++ b/tests/test_cases/2015/commands/7E0.0134.yaml
@@ -5,17 +5,21 @@ test_cases:
     O2S11_CURRENT: -0.89844
   response: 7E80641346EAD7F1A
 - expected_values:
-    LAMBDA11_CURRENT: 0.95358
-    O2S11_CURRENT: -0.26562
-  response: 7E80641347A0F7FBC
+    LAMBDA11_CURRENT: 0.90668
+    O2S11_CURRENT: -0.55859
+  response: 7E8064134740E7F71
 - expected_values:
     LAMBDA11_CURRENT: 0.99167
     O2S11_CURRENT: -0.05469
   response: 7E80641347EEF7FF2
 - expected_values:
-    LAMBDA11_CURRENT: 1.01514
-    O2S11_CURRENT: 0.05859
-  response: 7E806413481F0800F
+    LAMBDA11_CURRENT: 1.00537
+    O2S11_CURRENT: 0.01562
+  response: 7E806413480B08004
+- expected_values:
+    LAMBDA11_CURRENT: 1.99
+    O2S11_CURRENT: 2.65234
+  response: 7E8064134FFFF82A7
 - expected_values:
     LAMBDA11_CURRENT: 1.99
     O2S11_CURRENT: 3.8125
