--- a/tests/test_cases/2015/commands/7E0.0134.yaml
+++ b/tests/test_cases/2015/commands/7E0.0134.yaml
@@ -9,13 +9,13 @@ test_cases:
     O2S11_CURRENT: -0.55859
   response: 7E8064134740E7F71
 - expected_values:
-    LAMBDA11_CURRENT: 0.99167
-    O2S11_CURRENT: -0.05469
-  response: 7E80641347EEF7FF2
+    LAMBDA11_CURRENT: 0.99557
+    O2S11_CURRENT: -0.02734
+  response: 7E80641347F6F7FF9
 - expected_values:
-    LAMBDA11_CURRENT: 1.00537
+    LAMBDA11_CURRENT: 1.00439
     O2S11_CURRENT: 0.01562
-  response: 7E806413480B08004
+  response: '7E806413480908004'
 - expected_values:
     LAMBDA11_CURRENT: 1.99
     O2S11_CURRENT: 2.65234
