--- a/tests/test_cases/2015/commands/7E0.0131.yaml
+++ b/tests/test_cases/2015/commands/7E0.0131.yaml
@@ -4,5 +4,8 @@ test_cases:
     CLR_DIST: 8047
   response: 7E80441311F6F
 - expected_values:
-    CLR_DIST: 8168
-  response: 7E80441311FE8
+    CLR_DIST: 8191
+  response: 7E80441311FFF
+- expected_values:
+    CLR_DIST: 8192
+  response: '7E80441312000'
