--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -1,5 +1,7 @@
 model_year: 2018
 supported_commands_by_ecu:
+  "7C6":
+  - 7C6.7CE.22B002:TUCSON_FLI_VOL,TUCSON_ODO_KM,TUCSON_ODO_MI
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -40,10 +42,29 @@ supported_commands_by_ecu:
   - 0151:FUEL_TYP
   - 0156:LGSO2FT1
   - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
   - 7E0.0106:SHRTFT1
+  - 7E0.0107:LONGFT1
+  - 7E0.010B:MAP
+  - 7E0.010C:RPM
   - 7E0.010D:VSS
+  - 7E0.010E:SPARKADV
+  - 7E0.010F:IAT
+  - 7E0.0123:FRP
+  - 7E0.012E:EVAP_PCT
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
+  - 7E0.0132:EVAP_VP
+  - 7E0.0133:BARO
+  - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
+  - 7E0.013C:CATEMP11
+  - 7E0.0142:VPWR
+  - 7E0.0143:LOAD_ABS
+  - 7E0.0144:EQ_RAT
+  - 7E0.014C:TAC_PCT
+  - 7E0.0151:FUEL_TYP
+  - 7E0.0156:LGSO2FT1
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
@@ -61,5 +82,3 @@ supported_commands_by_ecu:
 unsupported_commands_by_ecu:
   "7A0":
   - 7A0.7A8.22C00B|fc=1:TUCSON_TP_FL,TUCSON_TP_FR,TUCSON_TP_RL,TUCSON_TP_RR
-  "7C6":
-  - 7C6.7CE.22B002:TUCSON_FLI_VOL,TUCSON_ODO_KM,TUCSON_ODO_MI
