--- a/tests/test_cases/2018/commands/7E0.0131.yaml
+++ b/tests/test_cases/2018/commands/7E0.0131.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0131
 test_cases:
 - expected_values:
-    CLR_DIST: 21657
-  response: '7E80441315499'
+    CLR_DIST: 12137
+  response: 7E80441312F69
 - expected_values:
     CLR_DIST: 24575
   response: 7E80441315FFF
