--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -1,5 +1,14 @@
 model_year: 2022
 supported_commands_by_ecu:
+  "7A0":
+  - 7A0.7A8.22C00B
+  "7DF":
+  - 7DF.0105
+  - 7DF.012F
+  - 7DF.0131
+  - 7DF.0134
+  - 7DF.0144
+  - 7DF.015E
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -62,3 +71,36 @@ supported_commands_by_ecu:
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
+unsupported_commands_by_ecu:
+  "7D1":
+  - 7D1.7D9.2101
+  - 7D1.7D9.220104
+  "7D4":
+  - 7D4.7DC.2101
+  "7D6":
+  - 7D6.7DE.2106
+  "7E0":
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
+  - 7E0.012F:FLI
+  - 7E0.0131:CLR_DIST
+  - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
+  - 7E0.0144:EQ_RAT
+  - 7E0.015E:FUEL_RATE
+  - 7E0.22E021
+  - 7E0.7E8.2100
+  - 7E0.7E8.2101
+  - 7E0.7E8.2102
+  - 7E0.7E8.2104
+  - 7E0.7E8.210D
+  - 7E0.7E8.2113
+  - 7E0.7E8.2114
+  - 7E0.7E8.2115
+  - 7E0.7E8.2116
+  - 7E0.7E8.2117
+  - 7E0.7E8.211D
+  - 7E0.7E8.22E019
+  "7E1":
+  - 7E1.7E9.0104
+  - 7E1.7E9.0105
+  - 7E1.7E9.0131
