Update command data for Hyundai/Tucson

--- a/tests/test_cases/2018/commands/7C6.7CE.22B002.yaml
+++ b/tests/test_cases/2018/commands/7C6.7CE.22B002.yaml
@@ -1,22 +1,27 @@
 command_id: 7C6.7CE.22B002
 test_cases:
 - expected_values:
-    TUCSON_FLI_VOL: 62
+    TUCSON_FLI_VOL: 41
   response: |-
     7CE100A62B002C00000
-    7CE21003EB600000000
+    7CE210029B700000000
 - expected_values:
     TUCSON_FLI_VOL: 64
   response: |-
     7CE100A62B002C00000
     7CE210040B700000000
 - expected_values:
-    TUCSON_FLI_VOL: 67
+    TUCSON_FLI_VOL: 255
   response: |-
     7CE100A62B002C00000
-    7CE210043B800000000
+    7CE2100FF9C00000000
 - expected_values:
-    TUCSON_FLI_VOL: 80
+    TUCSON_FLI_VOL: 255
   response: |-
     7CE100A62B002C00000
-    7CE210050B700000000
+    7CE2100FF9D00000000
+- expected_values:
+    TUCSON_FLI_VOL: 255
+  response: |-
+    7CE100A62B002C00000
+    7CE2100FFA000000000
