--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -2,6 +2,8 @@ model_year: 2018
 supported_commands_by_ecu:
   "7C6":
   - 7C6.7CE.22B002:TUCSON_FLI_VOL,TUCSON_ODO_KM,TUCSON_ODO_MI
+  "7DF":
+  - 7DF.012F
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -51,6 +53,8 @@ supported_commands_by_ecu:
   - 7E0.010D:VSS
   - 7E0.010E:SPARKADV
   - 7E0.010F:IAT
+  - 7E0.0111:TP
+  - 7E0.011F:RUNTM
   - 7E0.0123:FRP
   - 7E0.012E:EVAP_PCT
   - 7E0.012F:FLI
@@ -62,6 +66,8 @@ supported_commands_by_ecu:
   - 7E0.0142:VPWR
   - 7E0.0143:LOAD_ABS
   - 7E0.0144:EQ_RAT
+  - 7E0.0146:AAT
+  - 7E0.0147:TP_B
   - 7E0.014C:TAC_PCT
   - 7E0.0151:FUEL_TYP
   - 7E0.0156:LGSO2FT1
