--- a/tests/test_cases/2018/commands/7E0.0105.yaml
+++ b/tests/test_cases/2018/commands/7E0.0105.yaml
@@ -4,5 +4,5 @@ test_cases:
     ECT: 39
   response: 7E80341054F
 - expected_values:
-    ECT: 52
-  response: 7E80341055C
+    ECT: 94
+  response: '7E803410586'
