--- a/tests/test_cases/2018/commands/7E0.0142.yaml
+++ b/tests/test_cases/2018/commands/7E0.0142.yaml
@@ -1,5 +1,11 @@
 command_id: 7E0.0142
 test_cases:
 - expected_values:
-    VPWR: 14.442
-  response: 7E8044142386A
+    VPWR: 0
+  response: '7E80441420000'
+- expected_values:
+    VPWR: 14.324
+  response: 7E804414237F4
+- expected_values:
+    VPWR: 14.347
+  response: 7E8044142380B
