--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -2,23 +2,33 @@ model_year: 2022
 supported_commands_by_ecu:
   "7A0":
   - 7A0.7A8.22C00B
+  - 7A0.7A8.22C00B|fc=1:TUCSON_TP_FL,TUCSON_TP_FR,TUCSON_TP_RL,TUCSON_TP_RR
+  "7C6":
+  - 7C6.7CE.22B002:TUCSON_FLI_VOL,TUCSON_ODO_KM,TUCSON_ODO_MI
   "7DF":
+  - 7DF.0104
   - 7DF.0105
+  - 7DF.0106
+  - 7DF.010D
+  - 7DF.0111
   - 7DF.012F
   - 7DF.0131
   - 7DF.0134
   - 7DF.0144
   - 7DF.015E
+  - 7DF.01A6
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
   - 0104:LOAD_PCT
+  - 0105:ECT
   - 0106:SHRTFT1
   - 0107:LONGFT1
   - 010B:MAP
   - 010C:RPM
   - 010D:VSS
   - 010E:SPARKADV
+  - 010F:IAT
   - 0110:MAF
   - 0111:TP
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
@@ -35,6 +45,7 @@ supported_commands_by_ecu:
   - 0131:CLR_DIST
   - 0132:EVAP_VP
   - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 013C:CATEMP11
   - 013E:CATEMP12
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
@@ -47,6 +58,7 @@ supported_commands_by_ecu:
   - 0149:APP_D
   - 014A:APP_E
   - 014C:TAC_PCT
+  - 014F:MAX_EQ_RAT,MAX_MAP,MAX_O2_CURR,MAX_O2_VOLT
   - 0151:FUEL_TYP
   - 0155:STSO2FT1
   - 0156:LGSO2FT1
@@ -62,9 +74,19 @@ supported_commands_by_ecu:
   - 01A6:ODO
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 0104:LOAD_PCT
+  - 0105:ECT
+  - 010C:RPM
+  - 010D:VSS
+  - 0111:TP
+  - 011C:OBDSUP
+  - 011F:RUNTM
+  - 0121:MIL_DIST
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
+  - 0142:VPWR
+  - 0149:APP_D
   "7E6":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 010C:RPM
@@ -82,11 +104,15 @@ unsupported_commands_by_ecu:
   "7E0":
   - 7E0.0104:LOAD_PCT
   - 7E0.0105:ECT
+  - 7E0.0106:SHRTFT1
+  - 7E0.010D:VSS
+  - 7E0.0111:TP
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
   - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 7E0.0144:EQ_RAT
   - 7E0.015E:FUEL_RATE
+  - 7E0.01A6:ODO
   - 7E0.22E021
   - 7E0.7E8.2100
   - 7E0.7E8.2101
@@ -103,4 +129,6 @@ unsupported_commands_by_ecu:
   "7E1":
   - 7E1.7E9.0104
   - 7E1.7E9.0105
+  - 7E1.7E9.010D
+  - 7E1.7E9.0111
   - 7E1.7E9.0131
