--- a/tests/test_cases/2018/commands/7E0.0131.yaml
+++ b/tests/test_cases/2018/commands/7E0.0131.yaml
@@ -4,8 +4,11 @@ test_cases:
     CLR_DIST: 12137
   response: 7E80441312F69
 - expected_values:
-    CLR_DIST: 24575
-  response: 7E80441315FFF
+    CLR_DIST: 12287
+  response: 7E80441312FFF
+- expected_values:
+    CLR_DIST: 12288
+  response: '7E80441313000'
 - expected_values:
     CLR_DIST: 24577
   response: '7E80441316001'
