--- a/tests/test_cases/2018/commands/7E0.0104.yaml
+++ b/tests/test_cases/2018/commands/7E0.0104.yaml
@@ -4,5 +4,5 @@ test_cases:
     LOAD_PCT: 0
   response: '7E803410400'
 - expected_values:
-    LOAD_PCT: 46.27451
-  response: '7E803410476'
+    LOAD_PCT: 88.23529
+  response: 7E8034104E1
