Update command data for Hyundai/Tucson

--- a/tests/test_cases/2022/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2022/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -24,3 +24,27 @@ test_cases:
     7A8230000C357010000
     7A8245893A893A891A8
     7A82591A8AAAAAAAAAA
+- expected_values:
+    TUCSON_TP_FL: 38.4
+    TUCSON_TP_FR: 38.6
+    TUCSON_TP_RL: 39
+    TUCSON_TP_RR: 39
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180C05A010000C1
+    7A8225B010000C35801
+    7A8230000C358010000
+    7A8244E9AB09BB098AE
+    7A82598AEAAAAAAAAAA
+- expected_values:
+    TUCSON_TP_FL: 38.4
+    TUCSON_TP_FR: 38.6
+    TUCSON_TP_RL: 38.8
+    TUCSON_TP_RR: 39
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180C05A010000C1
+    7A8225C010000C25801
+    7A8230000C359010000
+    7A8244E9AB09BB198AE
+    7A82599AFAAAAAAAAAA
