--- a/tests/test_cases/2018/commands/7E0.0111.yaml
+++ b/tests/test_cases/2018/commands/7E0.0111.yaml
@@ -4,5 +4,5 @@ test_cases:
     TP: 11.37255
   response: 7E80341111D
 - expected_values:
-    TP: 32.15686
-  response: '7E803411152'
+    TP: 61.96078
+  response: 7E80341119E
