--- a/tests/test_cases/2019/commands/7E0.0142.yaml
+++ b/tests/test_cases/2019/commands/7E0.0142.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VPWR: 14.088
   response: '7E80441423708'
+- expected_values:
+    VPWR: 14.347
+  response: 7E8044142380B
