Update command data for Hyundai/Tucson

--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -67,6 +67,7 @@ supported_commands_by_ecu:
   - 0172:WG_A_ACT,WG_A_ACT_SUP,WG_A_CMD,WG_A_CMD_SUP,WG_B_ACT,WG_B_ACT_SUP,WG_B_CMD,WG_B_CMD_SUP
   - 017F:IDLE_TIME,IDLE_TIME_SUP,PTO_TIME,PTO_TIME_SUP,RUN_TIME,RUN_TIME_SUP
   - 7E0.010D:VSS
+  - 7E0.011F:RUNTM
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
   - 7E0.0142:VPWR
