--- a/tests/test_cases/2015/commands/7E0.0106.yaml
+++ b/tests/test_cases/2015/commands/7E0.0106.yaml
@@ -4,5 +4,5 @@ test_cases:
     SHRTFT1: -21.09375
   response: '7E803410665'
 - expected_values:
-    SHRTFT1: 7.03125
-  response: '7E803410689'
+    SHRTFT1: 7.8125
+  response: 7E80341068A
