--- a/tests/test_cases/2019/commands/7E0.0142.yaml
+++ b/tests/test_cases/2019/commands/7E0.0142.yaml
@@ -1,14 +1,14 @@
 command_id: 7E0.0142
 test_cases:
 - expected_values:
-    VPWR: 13.711
-  response: 7E8044142358F
-- expected_values:
-    VPWR: 14.065
-  response: 7E804414236F1
+    VPWR: 13.688
+  response: '7E80441423578'
 - expected_values:
     VPWR: 14.088
   response: '7E80441423708'
+- expected_values:
+    VPWR: 14.324
+  response: 7E804414237F4
 - expected_values:
     VPWR: 14.347
   response: 7E8044142380B
