--- a/tests/test_cases/2018/commands/7E0.0106.yaml
+++ b/tests/test_cases/2018/commands/7E0.0106.yaml
@@ -4,5 +4,5 @@ test_cases:
     SHRTFT1: -17.96875
   response: '7E803410669'
 - expected_values:
-    SHRTFT1: 14.84375
-  response: '7E803410693'
+    SHRTFT1: 20.3125
+  response: 7E80341069A
