--- a/tests/test_cases/2018/commands/7E0.0134.yaml
+++ b/tests/test_cases/2018/commands/7E0.0134.yaml
@@ -1,18 +1,22 @@
 command_id: 7E0.0134
 test_cases:
 - expected_values:
-    LAMBDA11_CURRENT: 0.96555
-    O2S11_CURRENT: -0.13281
-  response: 7E80641347B977FDE
+    LAMBDA11_CURRENT: 0.93134
+    O2S11_CURRENT: -0.27344
+  response: 7E806413477367FBA
 - expected_values:
-    LAMBDA11_CURRENT: 0.99191
-    O2S11_CURRENT: -0.03906
-  response: 7E80641347EF77FF6
+    LAMBDA11_CURRENT: 0.93793
+    O2S11_CURRENT: -0.24219
+  response: 7E8064134780E7FC2
 - expected_values:
-    LAMBDA11_CURRENT: 0.99924
-    O2S11_CURRENT: -0.01562
-  response: 7E80641347FE77FFC
+    LAMBDA11_CURRENT: 1.00461
+    O2S11_CURRENT: -0.00391
+  response: 7E806413480977FFF
 - expected_values:
-    LAMBDA11_CURRENT: 1.04102
-    O2S11_CURRENT: 0.07031
-  response: '7E806413485408012'
+    LAMBDA11_CURRENT: 1.00903
+    O2S11_CURRENT: 0.00781
+  response: '7E806413481288002'
+- expected_values:
+    LAMBDA11_CURRENT: 1.99
+    O2S11_CURRENT: 2.37109
+  response: 7E8064134FFFF825F
