Update command data for Hyundai/Tucson

--- a/tests/test_cases/2018/commands/7E0.0134.yaml
+++ b/tests/test_cases/2018/commands/7E0.0134.yaml
@@ -1,21 +1,25 @@
 command_id: 7E0.0134
 test_cases:
 - expected_values:
-    LAMBDA11_CURRENT: 0.93134
-    O2S11_CURRENT: -0.27344
-  response: 7E806413477367FBA
+    LAMBDA11_CURRENT: 0.93036
+    O2S11_CURRENT: -0.27734
+  response: 7E806413477167FB9
 - expected_values:
-    LAMBDA11_CURRENT: 0.93793
-    O2S11_CURRENT: -0.24219
-  response: 7E8064134780E7FC2
+    LAMBDA11_CURRENT: 0.9924
+    O2S11_CURRENT: -0.03906
+  response: 7E80641347F077FF6
 - expected_values:
-    LAMBDA11_CURRENT: 1.00461
+    LAMBDA11_CURRENT: 1.00339
     O2S11_CURRENT: -0.00391
-  response: 7E806413480977FFF
+  response: 7E8064134806F7FFF
 - expected_values:
-    LAMBDA11_CURRENT: 1.00903
-    O2S11_CURRENT: 0.00781
-  response: '7E806413481288002'
+    LAMBDA11_CURRENT: 1.0051
+    O2S11_CURRENT: 0
+  response: 7E806413480A78000
+- expected_values:
+    LAMBDA11_CURRENT: 1.99
+    O2S11_CURRENT: 1.63281
+  response: 7E8064134FFFF81A2
 - expected_values:
     LAMBDA11_CURRENT: 1.99
     O2S11_CURRENT: 2.37109
