--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -46,6 +46,7 @@ supported_commands_by_ecu:
   - 0151:FUEL_TYP
   - 0156:LGSO2FT1
   - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 7E0.0104:LOAD_PCT
   - 7E0.0105:ECT
   - 7E0.0106:SHRTFT1
@@ -56,10 +57,13 @@ supported_commands_by_ecu:
   - 7E0.010E:SPARKADV
   - 7E0.010F:IAT
   - 7E0.0111:TP
+  - 7E0.011C:OBDSUP
   - 7E0.011F:RUNTM
+  - 7E0.0121:MIL_DIST
   - 7E0.0123:FRP
   - 7E0.012E:EVAP_PCT
   - 7E0.012F:FLI
+  - 7E0.0130:WARM_UPS
   - 7E0.0131:CLR_DIST
   - 7E0.0132:EVAP_VP
   - 7E0.0133:BARO
@@ -73,6 +77,7 @@ supported_commands_by_ecu:
   - 7E0.014C:TAC_PCT
   - 7E0.0151:FUEL_TYP
   - 7E0.0156:LGSO2FT1
+  - 7E0.0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
