--- a/tests/test_cases/2018/commands/7E0.010C.yaml
+++ b/tests/test_cases/2018/commands/7E0.010C.yaml
@@ -1,5 +1,11 @@
 command_id: 7E0.010C
 test_cases:
 - expected_values:
+    RPM: 956.5
+  response: 7E804410C0EF2
+- expected_values:
     RPM: 1920
   response: 7E804410C1E00
+- expected_values:
+    RPM: 2052
+  response: 7E804410C2010
