--- a/tests/test_cases/2018/commands/7E0.010E.yaml
+++ b/tests/test_cases/2018/commands/7E0.010E.yaml
@@ -1,5 +1,11 @@
 command_id: 7E0.010E
 test_cases:
 - expected_values:
+    SPARKADV: -4
+  response: 7E803410E78
+- expected_values:
+    SPARKADV: 3
+  response: 7E803410E86
+- expected_values:
     SPARKADV: 33.5
   response: 7E803410EC3
