--- a/tests/test_cases/2018/commands/7E0.010F.yaml
+++ b/tests/test_cases/2018/commands/7E0.010F.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.010F
 test_cases:
 - expected_values:
+    IAT: -40
+  response: 7E803410F00
+- expected_values:
     IAT: 5
   response: 7E803410F2D
