--- a/tests/test_cases/2018/commands/7E0.012E.yaml
+++ b/tests/test_cases/2018/commands/7E0.012E.yaml
@@ -1,5 +1,11 @@
 command_id: 7E0.012E
 test_cases:
 - expected_values:
+    EVAP_PCT: 12.94118
+  response: 7E803412E21
+- expected_values:
     EVAP_PCT: 23.13725
   response: 7E803412E3B
+- expected_values:
+    EVAP_PCT: 100
+  response: 7E803412EFF
