--- a/tests/test_cases/2018/commands/7E0.0133.yaml
+++ b/tests/test_cases/2018/commands/7E0.0133.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     BARO: 99
   response: '7E803413363'
+- expected_values:
+    BARO: 100
+  response: '7E803413364'
