--- a/tests/test_cases/2018/commands/7E0.0143.yaml
+++ b/tests/test_cases/2018/commands/7E0.0143.yaml
@@ -1,5 +1,11 @@
 command_id: 7E0.0143
 test_cases:
 - expected_values:
+    LOAD_ABS: 25.4902
+  response: '7E80441430041'
+- expected_values:
     LOAD_ABS: 39.60784
   response: '7E80441430065'
+- expected_values:
+    LOAD_ABS: 99.60784
+  response: 7E804414300FE
