--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -52,6 +52,7 @@ supported_commands_by_ecu:
   - 0163:TQ_REF
   - 0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
   - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 016B:EGRTA,EGRTA_SUP,EGRTA_WR_SUP,EGRTB,EGRTB_SUP,EGRTB_WR_SUP,EGRTC,EGRTC_SUP,EGRTC_WR_SUP,EGRTD,EGRTD_SUP,EGRTD_WR_SUP
   - 018E:TQ_FR
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
