--- a/tests/test_cases/2015/commands/7E0.0134.yaml
+++ b/tests/test_cases/2015/commands/7E0.0134.yaml
@@ -1,6 +1,10 @@
 command_id: 7E0.0134
 test_cases:
 - expected_values:
+    LAMBDA11_CURRENT: 0.82266
+    O2S11_CURRENT: -1.23828
+  response: 7E8064134694D7EC3
+- expected_values:
     LAMBDA11_CURRENT: 0.84415
     O2S11_CURRENT: -1.07422
   response: 7E80641346C0D7EED
