--- a/tests/test_cases/2015/commands/7E0.0105.yaml
+++ b/tests/test_cases/2015/commands/7E0.0105.yaml
@@ -4,5 +4,5 @@ test_cases:
     ECT: 40
   response: '7E803410550'
 - expected_values:
-    ECT: 87
-  response: 7E80341057F
+    ECT: 89
+  response: '7E803410581'
