--- a/tests/test_cases/2015/commands/7E0.0142.yaml
+++ b/tests/test_cases/2015/commands/7E0.0142.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VPWR: 14.274
   response: 7E804414237C2
+- expected_values:
+    VPWR: 14.58
+  response: 7E804414238F4
